--- a/main.css
+++ b/main.css
@@ -13,6 +13,15 @@ a {
     color: black;
 }
 
+
+.center {
+    margin: 0 auto;
+    display: block;
+}
+h1 {
+    text-align: center;
+}
+
 header > img {
     object-position: mid ;
 }
@@ -44,8 +53,9 @@ article h3 {
     font-family: 'Montserrat', sans-serif;
 }
 
+
 #map { 
-    width: 80%;
+    width: 100%;
     height: 600px;
     border: 1px solid silver;
     margin: auto;
