--- a/main.css
+++ b/main.css
@@ -12,8 +12,11 @@ body {
 a {
     color: black;
 }
+header > img {
+    max-width: 100% ;
+}
 
-
+/* Zentrierung der Überschrift und des Titelbildes*/
 .center {
     margin: 0 auto;
     display: block;
@@ -22,12 +25,14 @@ h1 {
     text-align: center;
 }
 
-header > img {
-    object-position: mid ;
+/*Einrücken des Textes nach links und rechts um 3em*/
+.format {
+    padding-left: 3em;
+    padding-right: 3em;
 }
 
 main {
-    max-width: 1200px;
+    max-width: 1024px;
     margin: auto;
     margin-top: -10px;
     border-top: 1px dashed white;
@@ -55,7 +60,7 @@ article h3 {
 
 
 #map { 
-    width: 100%;
+    width: 90%;
     height: 600px;
     border: 1px solid silver;
     margin: auto;
